Hompage 4 hero left side

--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -376,7 +376,68 @@
 
     <!-- Hero Section Start -->
     <section class="hero-4">
-      <div class="container hereo-4-container">hero 4</div>
+      <div class="container hero-4-container">
+        <div class="row">
+          <div class="col-xl-4">
+            <div class="hero-4-left-content">
+              <p class="hero-4-offer">
+                <i class="fa-sharp fa-solid fa-tags"></i> 59%
+                <span class="hero-4-discount">discount</span> for all items
+              </p>
+              <h1 class="hero-4-title">
+                Electric charging smart <br />
+                tea maker
+              </h1>
+
+              <p class="hero-4-subtitle">
+                Sell globally in minutes with localized currencies,
+                languages,<br />
+                and experiences in every market.
+              </p>
+
+              <div class="hero-4-specification">
+                <div class="hero-4-price">
+                  <p>Price</p>
+                  <h5>$199.75</h5>
+                </div>
+                <hr
+                  class="m-0 p-0 fa-rotate-180"
+                  style="width: 1px; height: 45px"
+                />
+                <div class="hero-4-colors">
+                  <p>Color</p>
+                  <div class="colors">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                </div>
+                <div
+                  class="hero-4-img position-relative rounded-circle overflow-hidden"
+                >
+                  <img
+                    src="assets/img/homepage-4/cooker-small.png"
+                    alt="RevAuto"
+                  />
+                  <div
+                    class="position-absolute hero-4-img-overlay d-flex align-items-center justify-content-center"
+                  >
+                    <a href="#" title="Play Video"
+                      ><i class="fa-sharp fa-solid fa-play text-white"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="hero-4-btns">
+                <button>Add to Cart</button>
+                <button>View Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-8">right side</div>
+        </div>
+      </div>
     </section>
 
     <!-- Footer section started -->
