make a hero of homepage 4

--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -378,7 +378,7 @@
     <section class="hero-4">
       <div class="container hero-4-container">
         <div class="row">
-          <div class="col-xl-4">
+          <div class="col-lg-6 col-xl-4">
             <div class="hero-4-left-content">
               <p class="hero-4-offer">
                 <i class="fa-sharp fa-solid fa-tags"></i> 59%
@@ -435,7 +435,138 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-8">right side</div>
+          <div class="col-lg-6 col-xl-8 hero-4-left-padding">
+            <div class="hero-4-right-content">
+              <div class="row">
+                <div class="col-xl-9">
+                  <div class="hero-4-main-img">
+                    <img src="assets/img/homepage-4/car-5.png" alt="revauto" />
+                    <div class="hero-4-bgs">
+                      <svg
+                        width="1142"
+                        height="1105"
+                        viewBox="0 0 1142 1105"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                        style="backdrop-filter: blur(294px)"
+                      >
+                        <g filter="url(#filter0_f_229_5839)">
+                          <circle cx="571" cy="534" r="277" fill="#4376fb" />
+                        </g>
+                        <defs>
+                          <filter
+                            id="filter0_f_229_5839"
+                            x="0"
+                            y="-37"
+                            width="1142"
+                            height="1142"
+                            filterUnits="userSpaceOnUse"
+                            color-interpolation-filters="sRGB"
+                          >
+                            <feFlood
+                              flood-opacity="0"
+                              result="BackgroundImageFix"
+                            />
+                            <feBlend
+                              mode="normal"
+                              in="SourceGraphic"
+                              in2="BackgroundImageFix"
+                              result="shape"
+                            />
+                            <feGaussianBlur
+                              stdDeviation="147"
+                              result="effect1_foregroundBlur_229_5839"
+                            />
+                          </filter>
+                        </defs>
+                      </svg>
+                      <svg
+                        width="606"
+                        height="606"
+                        viewBox="0 0 606 606"
+                        fill="none"
+                        opacity="0.5"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <circle
+                          cx="303"
+                          cy="303"
+                          r="303"
+                          fill="white"
+                          fill-opacity="0.25"
+                        />
+                        <circle
+                          cx="303"
+                          cy="303"
+                          r="302.5"
+                          stroke="#4376fb"
+                          stroke-opacity="0.16"
+                        />
+                      </svg>
+
+                      <svg
+                        width="512"
+                        height="512"
+                        viewBox="0 0 512 512"
+                        fill="none"
+                        opacity="0.5"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <circle
+                          cx="256"
+                          cy="256"
+                          r="256"
+                          fill="white"
+                          fill-opacity="0.25"
+                        />
+                        <circle
+                          cx="256"
+                          cy="256"
+                          r="255.5"
+                          stroke="#4376fb"
+                          stroke-opacity="0.16"
+                        />
+                      </svg>
+                    </div>
+
+                    <div class="hero-4-pagination">
+                      <div>
+                        <div></div>
+                      </div>
+                      <div class="active">
+                        <div></div>
+                      </div>
+                      <div>
+                        <div></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xl-3 d-none d-xl-block">
+                  <div class="hero-4-slider-navigation">
+                    <div>
+                      <img
+                        src="assets/img/homepage-4/hero-2.png"
+                        alt="RevAuto"
+                      />
+                    </div>
+                    <div class="active">
+                      <img
+                        src="assets/img/homepage-4/hero-3.png"
+                        alt="RevAuto"
+                      />
+                    </div>
+                    <div>
+                      <img
+                        src="assets/img/homepage-4/hero-4.png"
+                        alt="RevAuto"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
