--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -163,7 +163,7 @@
     <div class="offcanvas__overlay"></div>
 
     <!-- Header Section Start -->
-    <header id="header-sticky" class="header-1 style-inner">
+    <!-- <header id="header-sticky" class="header-1 style-inner">
       <div class="container">
         <div class="mega-menu-wrapper">
           <div class="header-main">
@@ -366,6 +366,83 @@
               <div class="header__hamburger d-xl-none my-auto">
                 <div class="sidebar__toggle">
                   <i class="fas fa-bars"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header> -->
+
+    <header id="header-sticky" class="navbar-2">
+      <div class="container">
+        <div class="row justify-content-between align-items-center">
+          <div class="col-md-4">
+            <div class="navbar-2-left">
+              <div class="navbar-2-logo">
+                <a href="index-4.html">
+                  <img src="assets/img/logo/black-logo.svg" alt="RevAuto" />
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-7">
+            <div class="navbar-2-right">
+              <menu class="navbar-2-menu">
+                <li>
+                  <a href="index-4.html">Home</a>
+                </li>
+                <li>
+                  <a href="about.html">About</a>
+                </li>
+                <li>
+                  <a href="#">Services</a>
+                </li>
+                <li>
+                  <a href="#">Pages</a>
+                </li>
+                <li>
+                  <a href="#">Shop</a>
+                </li>
+                <li>
+                  <a href="#">Blog</a>
+                </li>
+              </menu>
+
+              <div class="navbar-2-user-options">
+                <div class="search-wrapper">
+                  <form>
+                    <div class="position-relative">
+                      <input
+                        type="search"
+                        class="form-control search-input"
+                        placeholder="Search..."
+                        aria-label="Search"
+                      />
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="currentColor"
+                        class="bi bi-search search-icon"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                        />
+                      </svg>
+                    </div>
+                  </form>
+                </div>
+
+                <div class="buttons">
+                  <button class="cart-button" data-count="10">
+                    <i class="fa-sharp fa-regular fa-bag-shopping"></i>
+                    <span id="cart-count">0</span>
+                  </button>
+                  <button>
+                    <i class="fa-light fa-user"></i>
+                  </button>
                 </div>
               </div>
             </div>
