--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -388,27 +388,187 @@
           </div>
           <div class="col-md-7">
             <div class="navbar-2-right">
-              <menu class="navbar-2-menu">
-                <li>
-                  <a href="index-4.html">Home</a>
-                </li>
-                <li>
-                  <a href="about.html">About</a>
-                </li>
-                <li>
-                  <a href="#">Services</a>
-                </li>
-                <li>
-                  <a href="#">Pages</a>
-                </li>
-                <li>
-                  <a href="#">Shop</a>
-                </li>
-                <li>
-                  <a href="#">Blog</a>
-                </li>
-              </menu>
+              <!-- right -->
+              <div class="mean__menu-wrapper">
+                <div class="main-menu">
+                  <nav id="mobile-menu">
+                    <ul>
+                      <li class="has-dropdown active menu-thumb">
+                        <a href="index.html"> Home </a>
+                        <ul class="submenu has-homemenu">
+                          <li>
+                            <div class="row g-4 homemenu-items">
+                              <div class="col-lg-3">
+                                <div class="homemenu">
+                                  <div class="homemenu-thumb">
+                                    <a href="index.html">
+                                      <img
+                                        src="assets/img/header/home-1.jpg"
+                                        alt="img"
+                                      />
+                                    </a>
+                                  </div>
+                                  <h4 class="homemenu-title">
+                                    <a href="index.html">Home Page 01</a>
+                                  </h4>
+                                </div>
+                              </div>
+                              <div class="col-lg-3">
+                                <div class="homemenu">
+                                  <div class="homemenu-thumb">
+                                    <a href="index-2.html">
+                                      <img
+                                        src="assets/img/header/home-2.jpg"
+                                        alt="img"
+                                      />
+                                    </a>
+                                  </div>
+                                  <h4 class="homemenu-title">
+                                    <a href="index-2.html">Home Page 02</a>
+                                  </h4>
+                                </div>
+                              </div>
+                              <div class="col-lg-3">
+                                <div class="homemenu">
+                                  <div class="homemenu-thumb">
+                                    <a href="index-3.html">
+                                      <img
+                                        src="assets/img/homepage-3/navbar.png"
+                                        alt="img"
+                                      />
+                                    </a>
+                                  </div>
+                                  <h4 class="homemenu-title">
+                                    <a href="index-3.html">Home Page 03</a>
+                                  </h4>
+                                </div>
+                              </div>
+                              <div class="col-lg-3">
+                                <div class="homemenu">
+                                  <div class="homemenu-thumb">
+                                    <a href="home-landing.html">
+                                      <img
+                                        src="assets/img/header/home-3.jpg"
+                                        alt="img"
+                                      />
+                                    </a>
+                                  </div>
+                                  <h4 class="homemenu-title">
+                                    <a href="home-landing.html"
+                                      >Car Accessories 01</a
+                                    >
+                                  </h4>
+                                </div>
+                              </div>
+                              <div class="col-lg-3">
+                                <div class="homemenu">
+                                  <div class="homemenu-thumb">
+                                    <a href="home-landing-2.html">
+                                      <img
+                                        src="assets/img/header/home-4.jpg"
+                                        alt="img"
+                                      />
+                                    </a>
+                                  </div>
+                                  <h4 class="homemenu-title">
+                                    <a href="home-landing-2.html"
+                                      >Car Accessories 02</a
+                                    >
+                                  </h4>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="has-dropdown active d-xl-none">
+                        <a href="team.html" class="border-none"> Home </a>
+                        <ul class="submenu">
+                          <li><a href="index.html">Home Page 01</a></li>
+                          <li><a href="index-2.html">Home Page 02</a></li>
+                          <li>
+                            <a href="home-landing.html">Car Accessories 01</a>
+                          </li>
+                          <li>
+                            <a href="home-landing-2.html">Car Accessories 02</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="about.html">About</a>
+                      </li>
+                      <li>
+                        <a href="service-details.html"> Services </a>
+                        <ul class="submenu">
+                          <li><a href="service.html">Services</a></li>
+                          <li>
+                            <a href="service-details.html">Service Details</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="has-dropdown">
+                        <a href="news.html"> Pages </a>
+                        <ul class="submenu">
+                          <li class="has-dropdown">
+                            <a href="project-details.html"> Portfolio </a>
+                            <ul class="submenu">
+                              <li><a href="project.html">Portfolio 01</a></li>
+                              <li><a href="project-2.html">Portfolio 02</a></li>
+                              <li>
+                                <a href="project-details.html"
+                                  >Project Details</a
+                                >
+                              </li>
+                            </ul>
+                          </li>
+                          <li class="has-dropdown">
+                            <a href="car-details.html"> Vehicles </a>
+                            <ul class="submenu">
+                              <li><a href="car.html">Vehicles</a></li>
+                              <li>
+                                <a href="car-details.html">Vehicles Details</a>
+                              </li>
+                            </ul>
+                          </li>
+                          <li><a href="faq.html">Faq's</a></li>
+                          <li><a href="contact.html">Contact Us</a></li>
+                          <li><a href="login.html">Log In</a></li>
+                          <li><a href="register.html">Register</a></li>
+                          <li><a href="404.html">404 Page</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="shop-details.html"> Shop </a>
+                        <ul class="submenu">
+                          <li><a href="shop.html">Shop</a></li>
+                          <li>
+                            <a href="shop-right-sidebar.html"
+                              >Shop Right Sidebar</a
+                            >
+                          </li>
+                          <li>
+                            <a href="shop-left-sidebar.html"
+                              >Shop Left Sidebar</a
+                            >
+                          </li>
+                          <li><a href="shop-cart.html">Shop Cart</a></li>
+                          <li><a href="shop-details.html">Shop Details</a></li>
+                          <li><a href="checkout.html">Checkout</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="news.html"> Blog </a>
+                        <ul class="submenu">
+                          <li><a href="news.html">Blog </a></li>
+                          <li><a href="news-details.html">Blog Details</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
 
+              <!-- user options -->
               <div class="navbar-2-user-options">
                 <div class="search-wrapper">
                   <form>
@@ -436,13 +596,13 @@
                 </div>
 
                 <div class="buttons">
-                  <button class="cart-button" data-count="10">
+                  <a href="shop-cart.html" class="cart-button" data-count="10">
                     <i class="fa-sharp fa-regular fa-bag-shopping"></i>
                     <span id="cart-count">0</span>
-                  </button>
-                  <button>
+                  </a>
+                  <a href="login.html">
                     <i class="fa-light fa-user"></i>
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
