Add mobile menu for navbar 2

--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -377,7 +377,7 @@
     <header id="header-sticky" class="navbar-2">
       <div class="container">
         <div class="row justify-content-between align-items-center">
-          <div class="col-md-4">
+          <div class="col-6 col-md-4">
             <div class="navbar-2-left">
               <div class="navbar-2-logo">
                 <a href="index-4.html">
@@ -386,9 +386,10 @@
               </div>
             </div>
           </div>
-          <div class="col-md-7">
+          <div class="col-6 col-md-7">
             <div class="navbar-2-right">
               <!-- right -->
+              <!-- general menu -->
               <div class="mean__menu-wrapper">
                 <div class="main-menu">
                   <nav id="mobile-menu">
@@ -570,7 +571,7 @@
 
               <!-- user options -->
               <div class="navbar-2-user-options">
-                <div class="search-wrapper">
+                <div class="search-wrapper d-none d-md-block">
                   <form>
                     <div class="position-relative">
                       <input
@@ -603,6 +604,12 @@
                   <a href="login.html">
                     <i class="fa-light fa-user"></i>
                   </a>
+
+                  <div class="header__hamburger d-xl-none my-auto">
+                    <div class="sidebar__toggle">
+                      <i class="fas fa-bars"></i>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
