--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -520,23 +520,6 @@
                             <div></div>
                           </div>
                         </div>
-                        <div
-                          class="hero-4-img position-relative rounded-circle overflow-hidden"
-                        >
-                          <img
-                            src="assets/img/homepage-4/cooker-small.png"
-                            alt="RevAuto"
-                          />
-                          <div
-                            class="position-absolute hero-4-img-overlay d-flex align-items-center justify-content-center"
-                          >
-                            <a href="#" title="Play Video"
-                              ><i
-                                class="fa-sharp fa-solid fa-play text-white"
-                              ></i
-                            ></a>
-                          </div>
-                        </div>
                       </div>
 
                       <div class="hero-4-btns">
@@ -647,16 +630,8 @@
                               </svg>
                             </div>
 
-                            <div class="hero-4-pagination">
-                              <!-- <div>
-                                <div></div>
-                              </div>
-                              <div class="active">
-                                <div></div>
-                              </div>
-                              <div>
-                                <div></div>
-                              </div> -->
+                            <div class="hero-4-pagination swiper-dot">
+                              <div class="dot"></div>
                             </div>
                           </div>
                         </div>
