--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -1034,6 +1034,27 @@
       </div>
     </section>
 
+    <!-- offer section -->
+    <section class="mt-4">
+      <div class="offer-4-wrapper container">
+        <p>Limited time offer</p>
+        <p><i class="fa-sharp fa-solid fa-star"></i></p>
+        <p>Limited time offer</p>
+        <p><i class="fa-sharp fa-solid fa-star"></i></p>
+        <p>Limited time offer</p>
+        <p><i class="fa-sharp fa-solid fa-star"></i></p>
+        <p>Limited time offer</p>
+        <p><i class="fa-sharp fa-solid fa-star"></i></p>
+        <p>Limited time offer</p>
+        <p><i class="fa-sharp fa-solid fa-star"></i></p>
+        <p>Limited time offer</p>
+        <p><i class="fa-sharp fa-solid fa-star"></i></p>
+        <p>Limited time offer</p>
+        <p><i class="fa-sharp fa-solid fa-star"></i></p>
+        <p>Limited time offer</p>
+      </div>
+    </section>
+
     <!-- Footer section started -->
     <footer class="footer-3">
       <!-- contact info -->
