add video section on homepage 4

--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -5231,6 +5231,45 @@
       </div>
     </section>
 
+    <section class="video-4">
+      <div class="container">
+        <div class="bg-overlay">
+          <img src="assets/img/homepage-4/video-2.svg" alt="RevAuto">
+          <img src="assets/img/homepage-4/video-3.svg" alt="RevAuto">
+        </div>
+
+        <div class="video-4-content">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="video-4-left">
+                <div class="video-4-play-button">
+                  <div>
+                    <div>
+                      <div>
+                        <button><i class="fa-sharp-duotone fa-solid fa-play"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div>
+                  <h1>See the worlds like Tiger</h1>
+                  <a href="#">View all cars</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 d-flex align-items-center">
+              <div class="video-4-right">
+                <img src="assets/img/homepage-4/video-1.png" alt="RevAuto">
+
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer section started -->
     <footer class="footer-3">
       <!-- contact info -->
