Add feature product at the homepage 4

--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -5511,6 +5511,172 @@
       </div>
     </section>
 
+    <!-- Feature Product Section Start -->
+    <section class="feature-product-section fix section-padding-2 section-bg">
+      <div class="container custom-container">
+        <div class="section-title-area">
+          <div class="section-title">
+            <h6 class="wow fadeInUp">Our Products</h6>
+            <h2 class="wow fadeInUp" data-wow-delay=".3s">
+              Top Featured Products
+            </h2>
+          </div>
+          <a
+            href="shop.html"
+            class="theme-btn wow fadeInUp"
+            data-wow-delay=".5s"
+            >See All Products <i class="fa-regular fa-car"></i
+          ></a>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="feature-product-left-items">
+              <div class="product-thumb">
+                <img src="assets/img/shop/13.png" alt="img" />
+              </div>
+              <div class="content">
+                <h6>New season trends!</h6>
+                <h3>Best auto parts Collection</h3>
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-regular fa-star"></i>
+                  <span>(2 reviews)</span>
+                </div>
+                <div class="price-list">
+                  <h3>$60.00</h3>
+                  <del>$75.00</del>
+                </div>
+                <div class="coming-soon">
+                  <ul>
+                    <li
+                      style="background-image: url('assets/img/shop/shape.png')"
+                    >
+                      <span id="day">277</span>
+                      <p>Days</p>
+                    </li>
+                    <li
+                      style="background-image: url('assets/img/shop/shape.png')"
+                    >
+                      <span id="Hours">11</span>
+                      <p class="cont">hours</p>
+                    </li>
+                    <li
+                      style="background-image: url('assets/img/shop/shape.png')"
+                    >
+                      <span id="Minutes">30</span>
+                      <p>Min</p>
+                    </li>
+                    <li
+                      style="background-image: url('assets/img/shop/shape.png')"
+                    >
+                      <span id="Seconds">22</span>
+                      <p>Sec</p>
+                    </li>
+                  </ul>
+                </div>
+                <button  class="theme-btn add-to-cart-2">Add To Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-lg-6 col-md-6">
+                <div class="feature-product-box-items">
+                  <div class="thumb">
+                    <img src="assets/img/shop/14.png" alt="img" />
+                  </div>
+                  <div class="content">
+                    <p>SUZUKI</p>
+                    <h4><a href="shop-details.html">Tail Light Lens</a></h4>
+                    <div class="star">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="price-list">
+                      <h3>$60.00</h3>
+                      <del>$75.00</del>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6">
+                <div class="feature-product-box-items">
+                  <div class="thumb">
+                    <img src="assets/img/shop/15.png" alt="img" />
+                  </div>
+                  <div class="content">
+                    <p>SUZUKI</p>
+                    <h4><a href="shop-details.html">Steel Rim </a></h4>
+                    <div class="star">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="price-list">
+                      <h3>$60.00</h3>
+                      <del>$75.00</del>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6">
+                <div class="feature-product-box-items">
+                  <div class="thumb">
+                    <img src="assets/img/shop/16.png" alt="img" />
+                  </div>
+                  <div class="content">
+                    <p>SUZUKI</p>
+                    <h4><a href="shop-details.html">Brake Conversion</a></h4>
+                    <div class="star">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="price-list">
+                      <h3>$60.00</h3>
+                      <del>$75.00</del>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-6">
+                <div class="feature-product-box-items">
+                  <div class="thumb">
+                    <img src="assets/img/shop/17.png" alt="img" />
+                  </div>
+                  <div class="content">
+                    <p>SUZUKI</p>
+                    <h4><a href="shop-details.html">Replica Wheels</a></h4>
+                    <div class="star">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <div class="price-list">
+                      <h3>$60.00</h3>
+                      <del>$75.00</del>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer section started -->
     <footer class="footer-3">
       <!-- contact info -->
