Add blog section on homepage 4

--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -5480,7 +5480,7 @@
         <div class="row g-3">
           <div class="col-md-6 col-xl-5">
             <div class="highlight-4-left">
-              <img src="assets/img/shop/tire-2.png" alt="RevAuto">
+              <img src="assets/img/shop/tire-2.png" alt="RevAuto" />
 
               <div class="left-side-body">
                 <div class="title">
@@ -5495,7 +5495,7 @@
           </div>
           <div class="col-md-6 col-xl-7">
             <div class="highlight-4-right">
-              <img src="assets/img/shop/tire.png" alt="RevAuto">
+              <img src="assets/img/shop/tire.png" alt="RevAuto" />
               <div class="right-side-body">
                 <div class="title">
                   <span>Limited Offer</span>
@@ -5577,7 +5577,7 @@
                     </li>
                   </ul>
                 </div>
-                <button  class="theme-btn add-to-cart-2">Add To Cart</button>
+                <button class="theme-btn add-to-cart-2">Add To Cart</button>
               </div>
             </div>
           </div>
@@ -5670,6 +5670,106 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- News Section Start -->
+    <section class="news-section section-padding-2 section-bg fix">
+      <div class="container custom-container">
+        <div class="section-title-area">
+          <div class="section-title">
+            <h6>Latest News</h6>
+            <h2>
+              Check out our blog <br />
+              posts
+            </h2>
+          </div>
+          <a href="news.html" class="theme-btn"
+            >View More <i class="fa-regular fa-car"></i
+          ></a>
+        </div>
+        <div class="row">
+          <div class="col-xl-6 col-lg-6 col-md-6">
+            <div class="news-card-items">
+              <div class="content">
+                <h4>12/ <span>JUNE</span></h4>
+                <h3>
+                  <a href="news-details.html"
+                    >Luxury Cars Economy Cars Which is Right for You</a
+                  >
+                </h3>
+                <p>
+                  Electric vehicles sustainable transportation. Explore their
+                  benefits, growing range
+                </p>
+                <a href="news-details.html" class="theme-btn">Read More</a>
+              </div>
+              <div class="thumb">
+                <img src="assets/img/news/07.jpg" alt="img" />
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-6 col-md-6">
+            <div class="news-card-items">
+              <div class="content">
+                <h4>23/ <span>JUNE</span></h4>
+                <h3>
+                  <a href="news-details.html"
+                    >Understanding Car Financing: What You Need to Know</a
+                  >
+                </h3>
+                <p>
+                  Electric vehicles sustainable transportation. Explore their
+                  benefits, growing range
+                </p>
+                <a href="news-details.html" class="theme-btn">Read More</a>
+              </div>
+              <div class="thumb">
+                <img src="assets/img/news/08.jpg" alt="img" />
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-6 col-md-6">
+            <div class="news-card-items">
+              <div class="content">
+                <h4>17/ <span>JUNE</span></h4>
+                <h3>
+                  <a href="news-details.html"
+                    >What to Look for When Buying a Pre-Owned Car</a
+                  >
+                </h3>
+                <p>
+                  Electric vehicles sustainable transportation. Explore their
+                  benefits, growing range
+                </p>
+                <a href="news-details.html" class="theme-btn">Read More</a>
+              </div>
+              <div class="thumb">
+                <img src="assets/img/news/09.jpg" alt="img" />
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-6 col-md-6">
+            <div class="news-card-items">
+              <div class="content">
+                <h4>29/ <span>JUNE</span></h4>
+                <h3>
+                  <a href="news-details.html"
+                    >Luxury Cars Economy Cars Which is Right for You</a
+                  >
+                </h3>
+                <p>
+                  Electric vehicles sustainable transportation. Explore their
+                  benefits, growing range
+                </p>
+                <a href="news-details.html" class="theme-btn">Read More</a>
+              </div>
+              <div class="thumb">
+                <img src="assets/img/news/10.jpg" alt="img" />
               </div>
             </div>
           </div>
