Slider updated with navigation

--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -638,23 +638,14 @@
                         </div>
                         <div class="col-xl-3 d-none d-xl-block">
                           <div class="hero-4-slider-navigation">
-                            <div>
-                              <img
-                                src="assets/img/homepage-4/hero-2.png"
-                                alt="RevAuto"
-                              />
+                            <div class="hero-4-thumb" data-slide="1">
+                              <div class="ash"></div>
                             </div>
-                            <div class="active">
-                              <img
-                                src="assets/img/homepage-4/hero-3.png"
-                                alt="RevAuto"
-                              />
+                            <div class="hero-4-thumb" data-slide="2">
+                              <div class="black"></div>
                             </div>
-                            <div>
-                              <img
-                                src="assets/img/homepage-4/hero-4.png"
-                                alt="RevAuto"
-                              />
+                            <div class="hero-4-thumb" data-slide="3">
+                              <div class="yellow"></div>
                             </div>
                           </div>
                         </div>
@@ -664,7 +655,8 @@
                 </div>
               </div>
             </div>
-            <!-- two -->
+
+            <!-- second -->
             <div class="swiper-slide">
               <div class="hero-4-swiper-container">
                 <div class="row">
@@ -717,7 +709,7 @@
                         <div class="col-xl-9">
                           <div class="hero-4-main-img">
                             <img
-                              src="assets/img/homepage-4/car-5.png"
+                              src="assets/img/homepage-4/car.png"
                               alt="revauto"
                             />
                             <div class="hero-4-bgs">
@@ -820,23 +812,14 @@
                         </div>
                         <div class="col-xl-3 d-none d-xl-block">
                           <div class="hero-4-slider-navigation">
-                            <div>
-                              <img
-                                src="assets/img/homepage-4/hero-2.png"
-                                alt="RevAuto"
-                              />
+                            <div class="hero-4-thumb" data-slide="1">
+                              <div class="ash"></div>
                             </div>
-                            <div class="active">
-                              <img
-                                src="assets/img/homepage-4/hero-3.png"
-                                alt="RevAuto"
-                              />
+                            <div class="hero-4-thumb" data-slide="2">
+                              <div class="black"></div>
                             </div>
-                            <div>
-                              <img
-                                src="assets/img/homepage-4/hero-4.png"
-                                alt="RevAuto"
-                              />
+                            <div class="hero-4-thumb" data-slide="3">
+                              <div class="yellow"></div>
                             </div>
                           </div>
                         </div>
@@ -847,7 +830,7 @@
               </div>
             </div>
 
-            <!-- three -->
+            <!-- third -->
             <div class="swiper-slide">
               <div class="hero-4-swiper-container">
                 <div class="row">
@@ -900,7 +883,7 @@
                         <div class="col-xl-9">
                           <div class="hero-4-main-img">
                             <img
-                              src="assets/img/homepage-4/car-5.png"
+                              src="assets/img/homepage-4/car-3.png"
                               alt="revauto"
                             />
                             <div class="hero-4-bgs">
@@ -1003,23 +986,14 @@
                         </div>
                         <div class="col-xl-3 d-none d-xl-block">
                           <div class="hero-4-slider-navigation">
-                            <div>
-                              <img
-                                src="assets/img/homepage-4/hero-2.png"
-                                alt="RevAuto"
-                              />
+                            <div class="hero-4-thumb" data-slide="1">
+                              <div class="ash"></div>
                             </div>
-                            <div class="active">
-                              <img
-                                src="assets/img/homepage-4/hero-3.png"
-                                alt="RevAuto"
-                              />
+                            <div class="hero-4-thumb" data-slide="2">
+                              <div class="black"></div>
                             </div>
-                            <div>
-                              <img
-                                src="assets/img/homepage-4/hero-4.png"
-                                alt="RevAuto"
-                              />
+                            <div class="hero-4-thumb" data-slide="3">
+                              <div class="yellow"></div>
                             </div>
                           </div>
                         </div>
