Update landing page according to new homepage 4

--- a/index.html
+++ b/index.html
@@ -363,6 +363,28 @@
               <div class="demo-area">
                 <a
                   target="_blank"
+                  href="main-files/index-3.html"
+                  class="preview__item image d-block"
+                >
+                  <img
+                    src="landing/assets/images/landing-images/homepage-4.png"
+                    alt="image"
+                  />
+                </a>
+                <h3 class="text-center">
+                  <a
+                    target="_blank"
+                    href="main-files/index-3.html"
+                    class="primary-hover text-capitalize mt-30"
+                    >Home page 04</a
+                  >
+                </h3>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-4">
+              <div class="demo-area">
+                <a
+                  target="_blank"
                   href="main-files/home-landing.html"
                   class="preview__item image d-block"
                 >
@@ -444,7 +466,7 @@
             </p>
           </div>
           <div class="row g-3">
-            <h3 class="inner-pages-h3 mt-5">Car Detail Pages</h3>
+            <h2 class="inner-pages-h3 mt-5 fw-700">Car Detail Pages</h2>
             <div class="col-lg-3">
               <a
                 target="_blank"
@@ -486,7 +508,7 @@
                 >
               </h3>
             </div>
-            <h3 class="inner-pages-h3 mt-5">Shop Pages</h3>
+            <h2 class="inner-pages-h3 mt-70 fw-700">Shop Pages</h2>
             <div class="col-lg-3">
               <a
                 target="_blank"
@@ -568,7 +590,7 @@
                 >
               </h3>
             </div>
-            <h3 class="inner-pages-h3 mt-5">Cart Pages</h3>
+            <h2 class="inner-pages-h3 mt-70 fw-700">Cart Pages</h2>
             <div class="col-lg-3">
               <a
                 target="_blank"
@@ -585,11 +607,51 @@
                   target="_blank"
                   href="main-files/shop-cart.html"
                   class="primary-hover text-capitalize mt-30"
-                  >Shop Cart</a
+                  >Shop Cart 1</a
                 >
               </h3>
             </div>
-            <h3 class="inner-pages-h3 mt-5">User Dashboard Pages</h3>
+            <div class="col-lg-3">
+              <a
+                target="_blank"
+                href="main-files/shop-cart.html"
+                class="preview__item image d-block"
+              >
+                <img
+                  src="landing/assets/images/landing-images/shopping-cart-2.png"
+                  alt="image"
+                />
+              </a>
+              <h3 class="text-center">
+                <a
+                  target="_blank"
+                  href="main-files/shop-cart.html"
+                  class="primary-hover text-capitalize mt-30"
+                  >Shop Cart 2</a
+                >
+              </h3>
+            </div>
+            <div class="col-lg-3">
+              <a
+                target="_blank"
+                href="main-files/shop-cart.html"
+                class="preview__item image d-block"
+              >
+                <img
+                  src="landing/assets/images/landing-images/shopping-cart-3.png"
+                  alt="image"
+                />
+              </a>
+              <h3 class="text-center">
+                <a
+                  target="_blank"
+                  href="main-files/shop-cart.html"
+                  class="primary-hover text-capitalize mt-30"
+                  >Shop Cart 3</a
+                >
+              </h3>
+            </div>
+            <h2 class="inner-pages-h3 fw-700 mt-70">User Dashboard Pages</h2>
             <div class="col-lg-3">
               <a
                 target="_blank"
@@ -671,7 +733,7 @@
               </h3>
             </div>
 
-            <h3 class="inner-pages-h3 mt-5">Blog Pages</h3>
+            <h2 class="inner-pages-h3 mt-70 fw-700">Blog Pages</h2>
             <div class="col-lg-3">
               <a
                 target="_blank"
@@ -712,7 +774,7 @@
                 >
               </h3>
             </div>
-            <h3 class="inner-pages-h3 mt-5">Other Pages</h3>
+            <h2 class="inner-pages-h3 mt-70 fw-700">Other Pages</h2>
 
             <div class="col-lg-3">
               <a
